# fututender

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  pytest.ini
src/: main.py
src/alembic/: env.py
src/alembic/versions/: 42ccf5b36691_initial_database_setup.py  686a95d4755c_changed_to_use_array_type_in_database.py  8115d9fe542c_add_currency.py
src/db/: database_session_manager.py  utils.py
src/db/models/: tender.py  tenderdbo.py
src/exceptions/: base_exception.py  database_exception.py
src/importer/: NUTS_LB_2024_3035.geojson  importer.py
src/models/: tender.py
src/routers/: tenders.py
src/settings/: settings.py
src/templates/: main_page.html  tender.html
