[tool.poetry]
name = "futu-tender"
version = "0.0.1"
description = "An application to show public EU tenders"
authors = ["Diarmaid <diarmaid.de.burca@futurice.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
alembic = "^1.14.1"
pydantic-settings = "^2.7.1"
sqlalchemy = {extras= ["asyncio"], version = "^2.0.37"}
asyncpg = "^0.30.0"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.2"
pyright = "^1.1.392.post0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
